--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ a {
 }
 
 .visual{
+    padding-bottom: .5em;
     height: 5vh;
     display: flex;
     justify-content: flex-end;
@@ -31,8 +32,9 @@ a {
 
 main {
     display: flex;
-    /* width: 90vw; */
-    height: 85vh;
+    margin: 1em auto;
+    width: 90vw;
+    height: calc(85vh - 2em);
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
@@ -42,7 +44,9 @@ main {
 }
 
 .webcam {
+    flex-basis: 13%;
     position: relative;
+    flex-grow: 1;
 }
 
 .nick {
